--- a/styles.css
+++ b/styles.css
@@ -176,3 +176,40 @@
 *{
     background-size: inherit;
 }
+p{
+   padding: 30vh;
+   padding-bottom: 1vh;
+   font-size: xx-large; 
+   font-family: 'Courier New', Courier, monospace;
+   font-weight: bold;
+}
+@import url("https://fonts.googleapis.com/css?family=Raleway:900&display=swap");
+
+body {
+    margin: 0px;
+}
+
+#container {
+    position: absolute;
+    margin: auto;
+    width: 100vw;
+    height: 30vh;
+    top: 0;
+    bottom: 0;
+
+    filter: url(#threshold) blur(0.6px);
+}
+
+#text1,
+#text2 {
+    position: absolute;
+    width: 100%;
+    display: inline-block;
+
+    font-family: "Raleway", sans-serif;
+    font-size: 40pt;
+
+    text-align: center;
+
+    user-select: none;
+}
